set node & pnpm version

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Bread Receipes</title>
   </head>
   <body>
+    <!-- <div>
+      <header>
+        <h1 class="text-3xl font-bold underline">100 - Pate à pizza</h1>
+        <a href="https://ptung.netlify.app/breads/100-pate-pizza/">Recette détaillée</a>
+      </header>
+
+      <form>
+        <label for="field_allPurposeFlour">Farine t65 <span>100%</span></label>
+        <input id="field_allPurposeFlour" name="field_allPurposeFlour" type="number">
+
+        <label for="field_water">Eau</label>
+        <input id="field_water" name="field_water" type="number">
+
+        <label for="field_activeDryYeast">Levure sèche</label>
+        <input id="field_activeDryYeast" name="field_activeDryYeast" type="number">
+
+        <label for="field_salt">Sel</label>
+        <input id="field_salt" name="field_salt" type="number">
+
+        <label for="field_oliveOil">Huile d'olive</label>
+        <input id="field_oliveOil" name="field_oliveOil" type="number">
+
+        <label for="field_total">Total</label>
+        <input id="field_total" name="field_total" type="number">
+      </form>
+
+      <section>
+        <h2>Notes</h2>
+        <ul>
+          <li>1 pâton = 270g</li>
+        </ul>
+      </section>
+
+      <button>Partager</button>
+    </div> -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
